# iad

src/: CMakeLists.txt  activation-function.cpp  activation-function.hpp  affine-layer.cpp  affine-layer.hpp  cloneable.cpp  cloneable.hpp  compute-hog.py  convert-classification-data.py  divide-classification-data.py  eigen-cereal.hpp  error-histogram.py  identity.cpp  identity.hpp  k-nearest-neighbours.cpp  k-nearest-neighbours.hpp  main.cpp  multi-layer-perceptron.cpp  multi-layer-perceptron.hpp  neural-network-layer.cpp  neural-network-layer.hpp  neural-network.cpp  neural-network.hpp  parametric-rectified-linear-unit.cpp  parametric-rectified-linear-unit.hpp  perceptron-layer.cpp  perceptron-layer.hpp  plot-circles-3.py  plot-circles.py  plot-cost-function.py  plot-error.py  plot-sin.py  plot-sqrt.py  plot-testing-accuracy.py  plot-thirdfunction.py  plot-training-accuracy.py  prepare-classification-data.py  prepare-data-sets.py  radial-basis-function-layer.cpp  radial-basis-function-layer.hpp  (+8 more)
src/funkcja-2/training-results_2-1_64-1024_64.nn/: 2-1_64-1024_64.nn.plot.net  2-1_64-1024_64.nn.plot.test-errors  2-1_64-1024_64.nn.testing-cost  2-1_64-1024_64.nn.testing-extrapolation-cost  2-1_64-1024_64.nn.training-cost
src/funkcja-2/training-results_2-2_64-1024_16.nn/: 2-2_64-1024_16.nn.parameters  2-2_64-1024_16.nn.plot.net  2-2_64-1024_16.nn.plot.rbf-biases  2-2_64-1024_16.nn.plot.rbf-weights  2-2_64-1024_16.nn.plot.rbf-weights-net  2-2_64-1024_16.nn.plot.test-errors  2-2_64-1024_16.nn.testing-cost  2-2_64-1024_16.nn.testing-extrapolation-cost  2-2_64-1024_16.nn.training-cost
src/funkcja-2/training-results_2-2_64-1024_32/: 2-2_64-1024_32.parameters  2-2_64-1024_32.plot.actual  2-2_64-1024_32.plot.net  2-2_64-1024_32.plot.rbf-biases  2-2_64-1024_32.plot.rbf-weights  2-2_64-1024_32.plot.rbf-weights-net  2-2_64-1024_32.plot.test-errors  2-2_64-1024_32.testing-cost  2-2_64-1024_32.testing-extrapolation-cost  2-2_64-1024_32.training-cost
src/funkcja-2/training-results_2-2_64-1024_64.nn/: 2-2_64-1024_64.nn.parameters  2-2_64-1024_64.nn.plot.net  2-2_64-1024_64.nn.plot.rbf-biases  2-2_64-1024_64.nn.plot.rbf-weights  2-2_64-1024_64.nn.plot.rbf-weights-net  2-2_64-1024_64.nn.plot.test-errors  2-2_64-1024_64.nn.testing-cost  2-2_64-1024_64.nn.testing-extrapolation-cost  2-2_64-1024_64.nn.training-cost
src/funkcja-2/training-results_2-3_64-1024_8-8.n/: 2-3_64-1024_8-8.n.parameters  2-3_64-1024_8-8.n.plot.net  2-3_64-1024_8-8.n.plot.rbf-biases  2-3_64-1024_8-8.n.plot.rbf-weights  2-3_64-1024_8-8.n.plot.rbf-weights-net  2-3_64-1024_8-8.n.plot.test-errors  2-3_64-1024_8-8.n.testing-cost  2-3_64-1024_8-8.n.testing-extrapolation-cost  2-3_64-1024_8-8.n.training-cost
src/funkcja-3/training-results_3-1_256-1024_32.nn/: 3-1_256-1024_32.nn.parameters  3-1_256-1024_32.nn.plot.net1  3-1_256-1024_32.nn.plot.net2  3-1_256-1024_32.nn.plot.test-errors  3-1_256-1024_32.nn.testing-cost  3-1_256-1024_32.nn.testing-extrapolation-cost  3-1_256-1024_32.nn.training-cost
src/funkcja-3/training-results_3-1_64-1024_64.nn/: 3-1_64-1024_64.nn.parameters  3-1_64-1024_64.nn.plot.net1  3-1_64-1024_64.nn.plot.net2  3-1_64-1024_64.nn.plot.test-errors  3-1_64-1024_64.nn.testing-cost  3-1_64-1024_64.nn.testing-extrapolation-cost  3-1_64-1024_64.nn.training-cost
src/funkcja-3/training-results_3-2_256-1024_16.nn/: 3-2_256-1024_16.nn.parameters  3-2_256-1024_16.nn.plot.net1  3-2_256-1024_16.nn.plot.net2  3-2_256-1024_16.nn.plot.rbf-biases  3-2_256-1024_16.nn.plot.rbf-weights  3-2_256-1024_16.nn.plot.rbf-weights-net  3-2_256-1024_16.nn.plot.test-errors  3-2_256-1024_16.nn.testing-cost  3-2_256-1024_16.nn.testing-extrapolation-cost  3-2_256-1024_16.nn.training-cost
src/funkcja-3/training-results_3-3_256-1024_16-16.nn/: 3-3_256-1024_16-16.nn.parameters  3-3_256-1024_16-16.nn.plot.net1  3-3_256-1024_16-16.nn.plot.net2  (+7 more)
(+86 files in other folders)
